--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     // bcrypt
     implementation 'at.favre.lib:bcrypt:0.10.2'
 
+    // Lv.2-9: Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+
     // jwt
     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
